--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Your Name — Portfolio</title>
+  <title>Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header class="site-header">
-    <div class="logo">Your<span>Portfolio</span></div>
+    <div class="logo"><span>Portfolio</span></div>
     <nav class="nav">
       <a href="#home">Home</a>
       <a href="#about">About</a>
@@ -22,7 +22,7 @@
     <!-- HERO -->
     <section id="home" class="hero">
       <div class="hero-content">
-        <h1>Hi, I'm <span class="name">Your Name</span></h1>
+        <h1>Hi, I'm <span class="name">Aditi</span></h1>
         <p class="tagline"><span id="typed"></span><span class="cursor">|</span></p>
         <div class="cta">
           <!-- Replace resume.pdf with your file later -->
@@ -83,7 +83,7 @@
   </main>
 
   <footer class="site-footer">
-    <p>© <span id="year"></span> Your Name. Built with ❤️.</p>
+    <p>© <span id="year"></span> Aditi.</p>
   </footer>
 
   <script src="script.js"></script>
