--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
   <!-- ================= HOMEPAGE ================= -->
   <header id="home">
     <nav>
+        <button id="theme-toggle">🌙</button>
+
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About Me</a></li>
