--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <h2>Contact Me</h2>
     <p>✉️ Let’s connect! I’d love to hear about opportunities, collaborations, or discussions over tech ☕.</p>
     <ul>
-      <li>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></li>
+      <li>Email: <a href="mailto:aditijain1810@yahoo.com">aditijain1810@yahoo.com</a></li>
       <li>LinkedIn: <a href="#">LinkedIn Profile</a></li>
       <li>GitHub: <a href="#">GitHub Profile</a></li>
       <li><a href="#">Download General Resume</a></li>
