--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
     <p>All projects listed here with filtering by domain coming soon.</p> -->
     <h2>Projects</h2>
   <div class="projects-container">
-    <div class="project-card domain-software">
+    <div class="project-card software-project">
       <h3>Portfolio Website</h3>
       <p class="project-info">React-based dynamic portfolio with theme switching.</p>
       <a href="#">GitHub</a>
     </div>
-    <div class="project-card data-domain">
+    <div class="project-card data-project">
       <h3>Task Manager API</h3>
       <p class="project-info">Flask REST API with JWT authentication.</p>
       <a href="#">GitHub</a>
@@ -224,7 +224,7 @@
       <li>Email: <a href="mailto:aditijain1810@yahoo.com">aditijain1810@yahoo.com</a></li>
       <li>LinkedIn: <a href="#">LinkedIn Profile</a></li>
       <li>GitHub: <a href="#">GitHub Profile</a></li>
-      <li><a href="#">Download General Resume</a></li>
+      <!-- <li><a href="#">Download General Resume</a></li> -->
     </ul>
     <!-- <form>
       <label for="name">Name:</label><br>
@@ -245,12 +245,12 @@
 
   <!-- ================= FOOTER ================= -->
   <footer>
-    <p>© 2025 Arjun’s Portfolio | Built with ❤️ and curiosity</p>
-    <ul>
+    <p>© 2025 Aditi Jain</p>
+    <!-- <ul>
       <li><a href="#">Twitter</a></li>
       <li><a href="#">LinkedIn</a></li>
       <li><a href="#">GitHub</a></li>
-    </ul>
+    </ul> -->
   </footer>
   <script src="script.js"></script>
 </body>
